--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,5 +35,7 @@ models:
     # Config indicated by + and applies to all files under models/example/
     staging:
       +materialized: view
+    stripe:
+      +materialized: view
     marts:
       +materialized: table
